<resources>
    <string name="app_name">CareGiver</string>
    <!--    AIzaSyBTGSSFSm_l5Zwgo-fxMJbXXVcn_PNXVY8-->
    <string name="map_key" translatable="false">AIzaSyBTGSSFSm_l5Zwgo-fxMJbXXVcn_PNXVY8</string>


    <string name="login_text"><u>Login</u></string>
    <string name="go_to_newsfeed_text"><u>Go to Newsfeed</u></string>

    <string name="user_name">Username</string>
    <string name="user_email_phone">Gmail or Phone Number</string>
    <string name="user_password">Password</string>
    <string name="user_confirm_password">Confirm Password</string>

    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="error_check_username">Wrong User Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>