<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ui_background"
    android:id="@+id/nestedScrollView"
    tools:context=".view.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="bottom">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/care_giver_logo"
            app:civ_border_width="2dp"
            android:layout_gravity="center_horizontal"
            app:civ_border_color="@color/white"/>

        <TextView
            android:id="@+id/admintext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="Registration for Admin"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:background="@drawable/white_rectangle_background"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_username_layout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regusername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/reg_editbackground"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_gmail_layout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reggmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/reg_editbackground"
                    android:hint="@string/user_email_phone"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_password_layout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/reg_editbackground"
                    android:hint="@string/user_password"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_confirm_password_layout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regconfirmedpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/reg_editbackground"
                    android:hint="@string/user_confirm_password"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signupadmin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:background="@drawable/button_background"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:autoLink="all"
                android:linksClickable="false"
                android:selectAllOnFocus="false"
                android:text="@string/login_text"
                android:textColor="@color/redlight" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>